@@ -16,7 +16,10 @@ UNRELEASED, S3QL tip
 
   * contrib/benchmark.py is now working again - thanks to
     davidthomson@gmail.com.
-    
+
+  * If a backend returns corrupted data, mount.s3ql no longer crashes
+    but switches to read-only operation.
+
 2013-08-27, S3QL 2.4
 
   * Attempts to upgrade a file system that is already at the newest
